# purehtml

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_pypi.yml
src/pure-html/: __init__.py  pure_html.py
src/pure-html/networks/: wikipedia_fetcher.py
src/pure-html/parsers/: constants.py  webpage_content_extractor.py
src/pure-html/samples/: R. Daneel Olivaw - Wikipedia.html
src/purehtml/: __init__.py  constants.py  html2md.py  purehtml.py
src/purehtml/samples/: Chat Completions - Azure.html  Donald Knuth - Wikipedia.html  LoRA - ar5iv.html  Transformers in Vision - A Survey - ar5iv.html  Vision Transformers - ar5iv.html  importlib - Python.html
