[project]
name = "purehtml"
version = "0.7.5"
authors = [
    { name="Hansimov" },
]
description = "Purify HTML by filtering tags and classes"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [ "tclogger", "beautifulsoup4" ]

[project.urls]
Homepage = "https://github.com/Hansimov/pure-html"
Issues = "https://github.com/Hansimov/pure-html/issues"